# knowledge_graph

./: .gitignore  README.md  conversion_test.py  conversion_test_2.py  deploy.sh  docker-compose.yml  dockerfile  graph.html  parsed_output.md  pyproject.toml  upload_to_neo4j.py  view_josn.py
api/: main.py
helpers/: df_helpers.py  kg_pipeline.py  prompts.py
llm/: __init__.py  base.py  groq_client.py  ollama_client.py
ollama/: client.py
tests/: test_api.py  test_llm_clients.py  test_properties.py
