[tool.poetry]
name = "knowledge-graph"  # Fixed typo in name
version = "0.1.0"
description = "Knowledge Graph package for code analysis"  # Added description
authors = ["Nayak <rahul.nyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.335"
pandas = "^2.3.3"
numpy = "^2.0.2"
pypdf = "^3.17.0"
unstructured = "^0.10.30"
pathlib = "^1.0.1"
networkx = "^3.2.1"
pyvis = "^0.3.2"
seaborn = "^0.13.0"
uuid = "^1.30"
jupyterlab = "^4.0.8"
yachalk = "^0.1.5"
groq = "^1.0.0"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
uvicorn = "^0.30.0"
httpx = "^0.28.1"
google-genai = "^1.47.0"
pillow = "^11.3.0"
pymupdf = "^1.26.5"
neo4j = "^5.14.1"
tenacity = "^9.1.2"
sentence-transformers = "^2.2.2"
torch = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
